@@ -9,4 +9,10 @@ class TestErbCommand < Test::Unit::TestCase
                        "var=hoge"],
                       "<%=var%>", ["hoge"])
   end
+
+  def test_template_file_encoding
+    assert_in_out_err(["-w",
+                       File.expand_path("../../../bin/erb", __FILE__)],
+                      "<%=''.encoding.to_s%>", ["UTF-8"])
+  end
 end
